# Bhaskara

./: CMakeLists.txt  README.md  version.h.in
.github/workflows/: nightly.yml
src/: CMakeLists.txt  main.cpp  resources.qrc
src/about/: CMakeLists.txt  about.ui
src/mainWindow/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/resources/: win32.rc
